fix: font and scrollbar fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,31 @@
+/* Customize website's scrollbar like Mac OS
+Not supports in Firefox and IE */
+
+/* total width */
+*::-webkit-scrollbar {
+    background-color: rgba(0,0,0,0.15);
+    width: 3px;
+}
+
+/* background of the scrollbar except button or resizer */
+*::-webkit-scrollbar-track {
+    background-color: rgba(0,0,0,0.10);
+}
+
+/* scrollbar itself */
+*::-webkit-scrollbar-thumb {
+    background-color: rgba(0,0,0,0.90);
+}
+
+/* set button(top and bottom of the scrollbar) */
+*::-webkit-scrollbar-button {
+    display:none;
+}
+
+* {
+    scrollbar-width: thin;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
